[gd_scene load_steps=4 format=3 uid="uid://dqfve5xttpiy7"]

[ext_resource type="Theme" uid="uid://cb4xq5fk16b2u" path="res://resources/theme.tres" id="1_he1sj"]
[ext_resource type="Script" uid="uid://cbovho50i8bnb" path="res://scripts/start.gd" id="2_r2jwc"]
[ext_resource type="AudioStream" uid="uid://brw7t20mvuf8g" path="res://assets/jamboy_loop.ogg" id="3_hm208"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_he1sj")
script = ExtResource("2_r2jwc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Collect the Squares"

[node name="Control" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HasProgressHBox" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer/Control"]
layout_mode = 2

[node name="ContinueBtn" type="Button" parent="Panel/CenterContainer/VBoxContainer/Control/HasProgressHBox"]
layout_mode = 2
text = "Continue"

[node name="RestartBtn" type="Button" parent="Panel/CenterContainer/VBoxContainer/Control/HasProgressHBox"]
layout_mode = 2
text = "Restart"

[node name="StartBtn" type="Button" parent="Panel/CenterContainer/VBoxContainer/Control"]
visible = false
layout_mode = 2
text = "Start"

[node name="SignOutBtn" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Sign Out"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hm208")
autoplay = true
